   string will not raise any ValueErrors but will re-initialise the code value
   from the nice_name attribute.
 * Implemented stalker.core.models.sequence.Sequence class along with its tests
 * added Sequence equality tests
 * improved Project equality tests
 * Implemented stalker.core.models.assetBase.AssetBase class along with its
   tests

v0.1.1.a5:
 * removed the StatusedEntity and its tests, with the introduction of
   StatusMixin, it is not necessary any more
 * added camera_lens.py to the examples, which shows how to extend SOM in its
   very basic form, also added tests testing this example
 * changed the database uri for the DatabaseTester, it now uses an in memory
   SQLite database instead a file based one.
 * Updated the version numbers in the roadmap
 * Added last_login attribute to User class tables and mapped it
 * because it was taking too much space in the diffs the VUE file which shows
   the design sketches has been removed from the trunk
 * added the ValidatedList class which is a list derivative that accepts only
   one type of object.
 * these SOM classes listed below uses ValidetedList in their list attributes
   requiring specific types of objects to be assigned:
   * entity.Entity
   * status.StatusList
   * structure.Structure
   * types.AssetType
   * department.Department
   * user.User
   * mixin.ReferenceMixin
 * added tests of the Project class
 * completed the first implementation of the Project class
 * to be able to use assertIsInstance method of mocker.MockerTestCase all the
   unittest.TestCase test classes are converted to mocker.MockerTestCase
 * changed the design of the db.mixins.ReferenceMixin.setup and
   db.mixins.StatusMixin.setup to organise the mixin classes' database setup
   helper functions, now they are converted to classes with a
   classmethod called setup doing all the functionality of the previous setup
   function and placed them under the db.mixin module.
 * added persistence tests project.Project