@@ -1,8 +1,8 @@
 About
 =====
 
-Stalker is a Production Digital Asset Management (ProdAM) System designed
-specifically for Animation and VFX Studios and licensed under BSD License.
+Stalker is a Production Asset Management (ProdAM) System designed specifically
+for Animation and VFX Studios and licensed under BSD License.
 
 Features:
  * Platform independent
